3_gitops_apps/3.2_apps/pgadmin/base/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant

metadata:

  name: allow-envoy-access

  namespace: pgadmin

spec:

  from:

  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: envoy-gateway-system

  to:

  - group: ""

    kind: Service
